# crewai_visiontool

./: .gitignore  README.md  TECHNICAL_DOCUMENTATION.md  pyproject.toml
src/crewai_visiontool/: crew.py  main.py
src/crewai_visiontool/config/: agents.yaml  tasks.yaml
src/crewai_visiontool/tools/: yolo_tool.py
